builder menus overflow hidden fix

--- a/src/resource/sass/app.scss
+++ b/src/resource/sass/app.scss
@@ -716,7 +716,8 @@ input[type="checkbox"].disabled:checked:before {
 }
 
 .layout {
-  overflow: hidden;
+  // overflow: hidden;
+  overflow: visible;
   min-height: 100px !important;
 }
 
